# chess-engine-gl

./: .gitignore  CMakeLists.txt  README.md
chess/: CMakeLists.txt  build.sh  chess.h  glcontrol.h  main.cpp  rungl.sh  stb_impl.cpp  test.cpp
chess/include/glad/: glad.h
chess/lib/: _enginemain.h  _render.h  boards.h  consts.h  shaders.h  states.h  utils.h
chess/lib/utils/: gameutils.h
chessSDL2/: CMakeLists.txt  main.cpp  run.sh  test.txt
chessSDL2/include/googletest/: CMakeLists.txt
chessSDL2/src/app/: _engine.cpp  _engine.h  _gui.cpp  _gui.h  gamemain.cpp  gamemain.h
chessSDL2/src/engine/: boards.cpp  boards.h  moves.cpp  moves.h  state.cpp  state.h  zobrist.h
chessSDL2/src/test/: force.cpp  force.h  init.cpp  init.h  initialize.cpp  magics.c
chessSDL2/src/utils/: consts.cpp  consts.h  engine.cpp  engine.h  gui.cpp  gui.h
nand2tetris/jackCompiler/: compile.sh  specification.txt  vmrunner.sh
nand2tetris/jackCompiler/codes/printbit/: Main.jack  Main.jack.save  Main.vm
nand2tetris/jackCompiler/codes/rect/: Main.jack  Main.vm  Rectangle.jack  Rectangle.vm
nand2tetris/jackCompiler/codes/squaredance/: Main.jack
pong/: CMakeLists.txt
pong/include/glad/: glad.c
pong/src/: consts.h  game.h  main.cpp
pong/src/lib/: objects.h  shaders.h  utils.h
ref/: instancing.h
ref/textures/: fragment.fs  shaders.h  useTextures.h
sockets/: client  client.cpp  server  server.cpp
sockets/golang/: client.go  go.mod
src/app/: _engine.cpp  _engine.h  _gui.cpp  _gui.h  gamemain.cpp  gamemain.h
src/engine/: boards.cpp  boards.h  moves.cpp  moves.h  state.cpp  state.h  zobrist.cpp
src/test/: force.h  init.cpp  init.h
src/utils/: consts.cpp  consts.h  engine.cpp  engine.h  gui.h
v1/: test.sh
v1/src/app/: _engine.h  gamemain.cpp
v1/src/engine/: state.cpp  state.h
v1/src/test/: force.cpp
v1/src/utils/: consts.h  gui.cpp  gui.h
v2/: CMakeLists.txt  main.cpp  taskfile.yaml
v2/docs/: board.md
v2/lib/: bitutills.h  board.h  gui.h  imports.h  moves.h  state.h  types.h  uci.h
v2/scripts/: sdl-install.sh
v2/src/: bitutils.cpp  board.cpp  gui.cpp  moves.cpp  types.cpp  uci.cpp
v2/test/: bitutils.test.cc  bitutils.test.cpp  board.test.cc  engine.test.cpp
